fix excess space in statistics/form window,  list of chart wrap now

--- a/src/main/resources/src/components/MainPage/StatisticsPage/StatisticsPage.scss
+++ b/src/main/resources/src/components/MainPage/StatisticsPage/StatisticsPage.scss
@@ -3,9 +3,7 @@
 .statistics {
     padding: 0 15px;
     box-sizing: border-box;
-    * {
-        font-family: "Montserrat", sans-serif;
-    }
+    --max-chart-width: 800px;
 
     @keyframes pulse-statistics-page {
         0% {
@@ -138,7 +136,7 @@
 
             .form-window {
                 .panel__chart-wrapper {
-                    max-width: 900px;
+                    max-width: var(--max-chart-width);
                     margin-top: 10px;
                 }
                 .main-window__title {
@@ -146,8 +144,13 @@
                     width: fit-content;
                 }
                 &__content {
-                    width: calc(90% - (var(--padding-left-right) * 2));
-                    height: calc(90% - (var(--padding-top-bottom) * 2));
+                    --form-window__size: calc(90% - (var(--padding-left-right) * 2));
+
+                    .window-message {
+                        --form-window__size: calc(100% - (var(--padding-left-right) * 2));
+                        width: var(--form-window__size);
+                        height: var(--form-window__size);
+                    }
                 }
             }
 
@@ -366,7 +369,6 @@
                 height: 100%;
                 flex: 0 1 calc(50% - 25px);
                 max-width: 700px;
-                // height: 400px;
                 .panel__category {
                     font-size: 125%;
                 }
@@ -385,6 +387,19 @@
                 height: 100%;
                 max-width: 700px;
 
+                .panel__charts-wrapper {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    width: 100%;
+
+                    .bar-chart {
+                        --max-chart-width: 700px;
+                        max-width: var(--max-chart-width);
+                        margin-right: 50px;
+                    }
+                }
+
                 .panel__category {
                     font-size: 1.1rem;
                 }
@@ -396,7 +411,6 @@
                     transition: 200ms cubic-bezier(0.23, 1, 0.32, 1);
                 }
                 .panel__chart-wrapper--content {
-                    // max-width: 600px;
                     margin: 0 auto;
                 }
 
